# fake-email

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile.apps  architecture.md  cargo.toml  db_setup.sh  digital_ocean.pub  docker-compose.yml  http-server.Dockerfile  railway.json  render.yaml  running_command.md  setup_dev.sh  smtp-server.Dockerfile  start.sh  stop.sh
.sqlx/: query-1691dfd86c715720bfd9b71f6d6ea1f42443b12c617736da76aa3e82805669d6.json  query-1ed95d13fa6ea1be671067d02251a469c752fc30329da317ac430ac47314eaac.json  query-2c438da839886cb2f3a18e8a8a30dbf454d42f934198d7f70e73acf20c284978.json  query-3a6706e1895b86aeefded39d004933b73436cbfe10ff0f9a131be6c706dee275.json  query-72641b19853b0984e88fd8b4e74ce0654574f42386a4a1261210fcf41f28c225.json  query-8a68cb7740b11af52365211e70f3943ac64fdbacbc4f43844cf690d220f65a26.json  query-9dc23a37a0979091b45769b67db98d550cf931d97aaac7be2587bf5803a38475.json  query-d2ce3eeb19db1292914d3c5061fa2224ec0b5082b1f85545f55eecb7e6d029eb.json
crates/db/: Cargo.toml  Dockerfile
crates/db/src/: background.rs  lib.rs  pool.rs  validation.rs
crates/http-server/: Cargo.toml  Dockerfile
crates/http-server/src/: core.rs  main.rs
crates/http-server/src/api/: dtos.rs  email.rs  mod.rs  webhook.rs
crates/smtp-server/: Cargo.toml  Dockerfile
crates/smtp-server/src/: lib.rs  main.rs  (+2 more)
deploy/nginx/: fake-email-api.conf
docs/: production-deployment.md
ui/: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+18 files in other folders)
