[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true, features = ["serde"] }
db = {path = "../db"}
dotenvy = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
uuid = { workspace = true }
